# hof-lode

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  tailwind.config.js  update-tailwind.ps1
assets/: index.css
hof-poll/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
hof-poll/src/: App.svelte  app.css
hof-poll/src/lib/: HousingOptionRender.svelte  IcoCheck.svelte  Poll.svelte  server_def.ts
migrations/: 20230712145406_inita.sql  20230712161627_updatetiming.sql  20230717215256_housingvoting.down.sql  20230717215256_housingvoting.up.sql
src/: lib.rs  main.rs
src/json/: mod.rs
templates/: error.askama  index.askama
