[package]
name = "hof-lode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0"}
axum = { version = "0.6.*", features = ["headers","macros"] }
tokio = { version = "1.*", features = ["full"] }
reqwest = {version=  "0.11.16", features = ["json"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tower-http = { version = "0.4.0", features = ["fs"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite","macros","migrate","chrono" ]  }
chrono = {version =  "0.4.24" ,features=  ["serde"]}
thiserror = "1.0.40"

[general]
dirs = ["templates"]
whitespace = "preserve"
[registries.crates-io]
protocol = "sparse"